[package]
name = "eframe_demo"
version = "0.1.0"
authors = ["Aleksei Novikov <novikov.aleksei.92@gmail.com>"]
edition = "2024"
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
rust-version = "1.85"

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "x86_64-pc-windows-msvc", "x86_64-apple-darwin"]

[dependencies]
egui = "0.31"
eframe = { version = "0.31", default-features = false, features = [
    "accesskit",     # Make egui compatible with screen readers. NOTE: adds a lot of dependencies.
    "default_fonts", # Embed the default egui fonts.
    "glow",          # Use the glow rendering backend. Alternative: "wgpu".
    "persistence",   # Enable restoring app state when restarting the app.
    "x11",
] }
log = "0.4"
rusqlite = { version = "0.33.0", features = ["bundled"] }

# You only need serde if you want app persistence:
serde = { version = "1", features = ["derive"] }
env_logger = "0.11"

[profile.release]
opt-level = 2 # fast and small wasm

# Optimize all dependencies even in debug builds:
[profile.dev.package."*"]
opt-level = 2
